Migrate to JDK 25 + Spring Boot 3.5.14, mass-fix mechanical PMD warnings
JDK 25 toolchain alignment:
- pom.xml: java.version/source/target/release 21 -> 25; spring-boot
  3.4.1 -> 3.5.14 (official Java 25 support); jacoco 0.8.12 -> 0.8.14
  (reads JDK 25 bytecode).
- Dockerfile, Dockerfile.local: temurin-21 -> temurin-25 build & runtime;
  removed dead pom-rewrite sed block from Dockerfile.local.
- .github/workflows/ci-cd.yml: JAVA_VERSION 21 -> 25; step names updated.

PMD mechanical fixes (round 1, ~1,594 violations cleared, build clean):
- UseUnderscoresInNumericLiterals: 252 sites (e.g. 10000 -> 10_000).
- LocalVariableCouldBeFinal: 887 sites (final on local var declarations).
- MethodArgumentCouldBeFinal: 428 sites (final on method parameters).

Bug fix surfaced by full compile:
- BertEmbeddingService.closeTensorQuietly: dropped dead catch block —
  OnnxTensor.close() does not declare throws OrtException.

.gitignore: added target/, .idea/, .vscode/, .DS_Store, .claude/ — and
untracked the ~995 stale build artifacts that were previously committed
under target/.

Plus pre-existing in-flight feature work (new analytics/benchmarks/
households/networth/planner/reports controllers, services, repositories,
and DynamoDB tables) bundled into this single commit per request.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>