@@ -1,5 +1,7 @@
 package com.budgetbuddy.service;
 
+
+import java.util.Locale;
 import com.budgetbuddy.exception.AppException;
 import com.budgetbuddy.exception.ErrorCode;
 import com.budgetbuddy.model.dynamodb.TransactionActionTable;
@@ -7,24 +9,21 @@ import com.budgetbuddy.model.dynamodb.TransactionTable;
 import com.budgetbuddy.model.dynamodb.UserTable;
 import com.budgetbuddy.repository.dynamodb.TransactionActionRepository;
 import com.budgetbuddy.repository.dynamodb.TransactionRepository;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Service;
-
+import com.budgetbuddy.util.IdGenerator;
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import com.budgetbuddy.util.IdGenerator;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
 
-/**
- * Service for managing transaction actions/reminders
- */
+/** Service for managing transaction actions/reminders */
 @Service
 public class TransactionActionService {
 
-    private static final Logger logger = LoggerFactory.getLogger(TransactionActionService.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(TransactionActionService.class);
 
     private final TransactionActionRepository actionRepository;
     private final TransactionRepository transactionRepository;
@@ -41,8 +40,9 @@ public class TransactionActionService {
 
     /**
      * Create a new transaction action
+     *
      * @param actionId Optional action ID from app. If provided and valid, use it for consistency.
-     *                 If not provided, generate a new UUID.
+     *     If not provided, generate a new UUID.
      */
     public TransactionActionTable createAction(
             final UserTable user,
@@ -52,12 +52,23 @@ public class TransactionActionService {
             final String dueDate,
             final String reminderDate,
             final String priority) {
-        return createAction(user, transactionId, title, description, dueDate, reminderDate, priority, null, null);
+        return createAction(
+                user,
+                transactionId,
+                title,
+                description,
+                dueDate,
+                reminderDate,
+                priority,
+                null,
+                null);
     }
-    
+
     /**
      * Create a new transaction action with optional action ID
-     * @param plaidTransactionId Optional Plaid transaction ID for fallback lookup if transactionId not found
+     *
+     * @param plaidTransactionId Optional Plaid transaction ID for fallback lookup if transactionId
+     *     not found
      */
     public TransactionActionTable createAction(
             final UserTable user,
@@ -75,119 +86,152 @@ public class TransactionActionService {
         if (transactionId == null || transactionId.isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT, "Transaction ID is required");
         }
-        if (title == null || title.trim().isEmpty()) {
+        if (title == null || title.isBlank()) {
             throw new AppException(ErrorCode.INVALID_INPUT, "Title is required");
         }
 
         // Verify transaction exists and belongs to user
         // Try to find by transactionId first
         Optional<TransactionTable> transactionOpt = transactionRepository.findById(transactionId);
-        
+
         // If not found and plaidTransactionId is provided, try lookup by Plaid ID
-        if (transactionOpt.isEmpty() && plaidTransactionId != null && !plaidTransactionId.isEmpty()) {
-            logger.debug("Transaction {} not found by ID, trying Plaid ID: {}", transactionId, plaidTransactionId);
+        if (transactionOpt.isEmpty()
+                && plaidTransactionId != null
+                && !plaidTransactionId.isEmpty()) {
+            LOGGER.debug(
+                    "Transaction {} not found by ID, trying Plaid ID: {}",
+                    transactionId,
+                    plaidTransactionId);
             transactionOpt = transactionRepository.findByPlaidTransactionId(plaidTransactionId);
             if (transactionOpt.isPresent()) {
-                TransactionTable foundTransaction = transactionOpt.get();
-                String foundTransactionId = foundTransaction.getTransactionId();
-                
-                // CRITICAL: Log if Plaid ID matches but transaction ID doesn't - indicates ID mismatch
+                final TransactionTable foundTransaction = transactionOpt.get();
+                final String foundTransactionId = foundTransaction.getTransactionId();
+
+                // CRITICAL: Log if Plaid ID matches but transaction ID doesn't - indicates ID
+                // mismatch
                 // Use case-insensitive comparison
-                if (!com.budgetbuddy.util.IdGenerator.equalsIgnoreCase(foundTransactionId, transactionId)) {
-                    logger.warn("⚠️ ID MISMATCH: Transaction found by Plaid ID {} but transaction IDs don't match. " +
-                            "Requested ID: {}, Found ID: {}. This indicates an ID generation mismatch between app and backend. " +
-                            "Using found transaction ID: {}", 
-                            plaidTransactionId, transactionId, foundTransactionId, foundTransactionId);
+                if (!com.budgetbuddy.util.IdGenerator.equalsIgnoreCase(
+                        foundTransactionId, transactionId)) {
+                    LOGGER.warn(
+                            "⚠️ ID MISMATCH: Transaction found by Plaid ID {} but transaction IDs don't match. "
+                                    + "Requested ID: {}, Found ID: {}. This indicates an ID generation mismatch between app and backend. "
+                                    + "Using found transaction ID: {}",
+                            plaidTransactionId,
+                            transactionId,
+                            foundTransactionId,
+                            foundTransactionId);
                 } else {
-                    logger.info("Found transaction by Plaid ID {} (transaction ID matches: {})", plaidTransactionId, transactionId);
+                    LOGGER.info(
+                            "Found transaction by Plaid ID {} (transaction ID matches: {})",
+                            plaidTransactionId,
+                            transactionId);
                 }
             }
         }
-        
+
         if (transactionOpt.isEmpty()) {
-            logger.warn("Transaction {} not found by ID or Plaid ID {} for user {} when creating action. Transaction may not be synced yet.", 
-                    transactionId, plaidTransactionId != null ? plaidTransactionId : "N/A", user.getEmail());
+            LOGGER.warn(
+                    "Transaction {} not found by ID or Plaid ID {} for user {} when creating action. Transaction may not be synced yet.",
+                    transactionId,
+                    plaidTransactionId != null ? plaidTransactionId : "N/A",
+                    user.getEmail());
             throw new AppException(ErrorCode.TRANSACTION_NOT_FOUND, "Transaction not found");
         }
-        
-        TransactionTable transaction = transactionOpt.get();
+
+        final TransactionTable transaction = transactionOpt.get();
         if (!transaction.getUserId().equals(user.getUserId())) {
-            throw new AppException(ErrorCode.UNAUTHORIZED_ACCESS, "Transaction does not belong to user");
-        }
-        
-        // Use the found transaction's ID (which might be different from the requested transactionId)
-        // This ensures the action is linked to the correct transaction in the backend
-        final String actualTransactionId = transaction.getTransactionId();
-        
-        // Log if we're using a different transaction ID than requested
-        // Use case-insensitive comparison
-        if (!com.budgetbuddy.util.IdGenerator.equalsIgnoreCase(actualTransactionId, transactionId)) {
-            logger.info("Using transaction ID {} (different from requested {}) for action creation. " +
-                    "This is expected when Plaid ID lookup finds a transaction with a different generated ID.", 
-                    actualTransactionId, transactionId);
+            throw new AppException(
+                    ErrorCode.UNAUTHORIZED_ACCESS, "Transaction does not belong to user");
         }
 
-        TransactionActionTable action = new TransactionActionTable();
-        
+        // Use the found transaction's ID (which might be different from the requested
+        // transactionId)
+        // This ensures the action is linked to the correct transaction in the backend
+        final String actualTransactionId = transaction.getTransactionId();
+
+        // Log if we're using a different transaction ID than requested
+        // Use case-insensitive comparison
+        if (!com.budgetbuddy.util.IdGenerator.equalsIgnoreCase(
+                actualTransactionId, transactionId)) {
+            LOGGER.info(
+                    "Using transaction ID {} (different from requested {}) for action creation. "
+                            + "This is expected when Plaid ID lookup finds a transaction with a different generated ID.",
+                    actualTransactionId,
+                    transactionId);
+        }
+
+        final TransactionActionTable action = new TransactionActionTable();
+
         // Use provided actionId if valid, otherwise generate new UUID
         if (actionId != null && !actionId.isEmpty() && IdGenerator.isValidUUID(actionId)) {
             // CRITICAL FIX: Normalize ID to lowercase before checking for existing
             // This ensures we check with the normalized ID that will be saved
-            String normalizedId = IdGenerator.normalizeUUID(actionId);
+            final String normalizedId = IdGenerator.normalizeUUID(actionId);
             // Check if action with this ID already exists (using normalized ID)
-            Optional<TransactionActionTable> existingById = actionRepository.findById(normalizedId);
+            final Optional<TransactionActionTable> existingById = actionRepository.findById(normalizedId);
             if (existingById.isPresent()) {
-                TransactionActionTable existing = existingById.get();
+                final TransactionActionTable existing = existingById.get();
                 // CRITICAL FIX: Verify the existing action belongs to the same user and transaction
-                // This ensures idempotent behavior - return existing action instead of throwing error
-                if (existing.getUserId().equals(user.getUserId()) && 
-                    existing.getTransactionId().equals(actualTransactionId)) {
+                // This ensures idempotent behavior - return existing action instead of throwing
+                // error
+                if (existing.getUserId().equals(user.getUserId())
+                        && existing.getTransactionId().equals(actualTransactionId)) {
                     // Same action (same user, same transaction) - return existing (idempotent)
-                    logger.info("Action with ID {} already exists for transaction {} and user {}. Returning existing for idempotency.", 
-                            normalizedId, actualTransactionId, user.getUserId());
+                    LOGGER.info(
+                            "Action with ID {} already exists for transaction {} and user {}. Returning existing for idempotency.",
+                            normalizedId,
+                            actualTransactionId,
+                            user.getUserId());
                     return existing;
                 } else {
-                    // Action exists but belongs to different user or transaction - security/conflict issue
-                    logger.warn("Action with ID {} already exists but belongs to different user or transaction. Generating new UUID.", normalizedId);
+                    // Action exists but belongs to different user or transaction -
+                    // security/conflict issue
+                    LOGGER.warn(
+                            "Action with ID {} already exists but belongs to different user or transaction. Generating new UUID.",
+                            normalizedId);
                     // Fall through to generate new UUID
                 }
             }
             // Set normalized ID
             action.setActionId(normalizedId);
-            logger.debug("Using provided action ID (normalized): {} -> {}", actionId, normalizedId);
+            LOGGER.debug("Using provided action ID (normalized): {} -> {}", actionId, normalizedId);
         } else {
             // Generate new UUID
             // CRITICAL FIX: Normalize generated UUID to lowercase for consistency
-            String generatedId = UUID.randomUUID().toString().toLowerCase();
+            final String generatedId = UUID.randomUUID().toString().toLowerCase(Locale.ROOT);
             action.setActionId(generatedId);
-            logger.debug("Generated new action ID (normalized): {}", generatedId);
+            LOGGER.debug("Generated new action ID (normalized): {}", generatedId);
         }
-        // Use the actual transaction ID (from the found transaction, which might differ from requested ID)
+        // Use the actual transaction ID (from the found transaction, which might differ from
+        // requested ID)
         action.setTransactionId(actualTransactionId);
         action.setUserId(user.getUserId());
         action.setTitle(title.trim());
-        action.setDescription(description != null && !description.trim().isEmpty() ? description.trim() : null);
+        action.setDescription(
+                description != null && !description.isBlank() ? description.trim() : null);
         action.setDueDate(dueDate);
         action.setReminderDate(reminderDate);
-        
+
         // Validate reminder date against due date (logs warning if reminder is after due date)
         if (reminderDate != null && dueDate != null) {
             reminderNotificationService.validateReminderDate(reminderDate, dueDate);
         }
-        
+
         action.setIsCompleted(false);
-        action.setPriority(priority != null ? priority.toUpperCase() : "MEDIUM");
+        action.setPriority(priority != null ? priority.toUpperCase(Locale.ROOT) : "MEDIUM");
         action.setCreatedAt(Instant.now());
         action.setUpdatedAt(Instant.now());
 
         actionRepository.save(action);
-        logger.info("Created action {} for transaction {} by user {}", action.getActionId(), transactionId, user.getEmail());
+        LOGGER.info(
+                "Created action {} for transaction {} by user {}",
+                action.getActionId(),
+                transactionId,
+                user.getEmail());
         return action;
     }
 
-    /**
-     * Update an existing transaction action
-     */
+    /** Update an existing transaction action */
     public TransactionActionTable updateAction(
             final UserTable user,
             final String actionId,
@@ -205,22 +249,29 @@ public class TransactionActionService {
             throw new AppException(ErrorCode.INVALID_INPUT, "Action ID is required");
         }
 
-        logger.debug("Looking up action with ID: {} for user: {}", actionId, user.getEmail());
-        TransactionActionTable action = actionRepository.findById(actionId)
-                .orElseThrow(() -> {
-                    logger.warn("Action not found: {} for user: {}", actionId, user.getEmail());
-                    return new AppException(ErrorCode.RECORD_NOT_FOUND, "Action not found");
-                });
+        LOGGER.debug("Looking up action with ID: {} for user: {}", actionId, user.getEmail());
+        final TransactionActionTable action =
+                actionRepository
+                        .findById(actionId)
+                        .orElseThrow(
+                                () -> {
+                                    LOGGER.warn(
+                                            "Action not found: {} for user: {}",
+                                            actionId,
+                                            user.getEmail());
+                                    return new AppException(
+                                            ErrorCode.RECORD_NOT_FOUND, "Action not found");
+                                });
 
         if (!action.getUserId().equals(user.getUserId())) {
             throw new AppException(ErrorCode.UNAUTHORIZED_ACCESS, "Action does not belong to user");
         }
 
-        if (title != null && !title.trim().isEmpty()) {
+        if (title != null && !title.isBlank()) {
             action.setTitle(title.trim());
         }
         if (description != null) {
-            action.setDescription(description.trim().isEmpty() ? null : description.trim());
+            action.setDescription(description.isBlank() ? null : description.trim());
         }
         if (dueDate != null) {
             action.setDueDate(dueDate);
@@ -236,7 +287,7 @@ public class TransactionActionService {
             action.setIsCompleted(isCompleted);
         }
         if (priority != null) {
-            action.setPriority(priority.toUpperCase());
+            action.setPriority(priority.toUpperCase(Locale.ROOT));
         }
         if (reminderDismissed != null) {
             action.setReminderDismissed(reminderDismissed);
@@ -244,13 +295,11 @@ public class TransactionActionService {
         action.setUpdatedAt(Instant.now());
 
         actionRepository.save(action);
-        logger.info("Updated action {} for user {}", actionId, user.getEmail());
+        LOGGER.info("Updated action {} for user {}", actionId, user.getEmail());
         return action;
     }
 
-    /**
-     * Delete a transaction action
-     */
+    /** Delete a transaction action */
     public void deleteAction(final UserTable user, final String actionId) {
         if (user == null || user.getUserId() == null || user.getUserId().isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT, "User is required");
@@ -259,23 +308,29 @@ public class TransactionActionService {
             throw new AppException(ErrorCode.INVALID_INPUT, "Action ID is required");
         }
 
-        TransactionActionTable action = actionRepository.findById(actionId)
-                .orElseThrow(() -> new AppException(ErrorCode.RECORD_NOT_FOUND, "Action not found"));
+        final TransactionActionTable action =
+                actionRepository
+                        .findById(actionId)
+                        .orElseThrow(
+                                () ->
+                                        new AppException(
+                                                ErrorCode.RECORD_NOT_FOUND, "Action not found"));
 
         if (!action.getUserId().equals(user.getUserId())) {
             throw new AppException(ErrorCode.UNAUTHORIZED_ACCESS, "Action does not belong to user");
         }
 
         actionRepository.delete(actionId);
-        logger.info("Deleted action {} for user {}", actionId, user.getEmail());
+        LOGGER.info("Deleted action {} for user {}", actionId, user.getEmail());
     }
 
     /**
-     * Get all actions for a transaction
-     * Note: Returns actions even if transaction doesn't exist yet (transaction may not be synced from Plaid)
-     * This allows actions to be created/updated before the transaction is synced
+     * Get all actions for a transaction Note: Returns actions even if transaction doesn't exist yet
+     * (transaction may not be synced from Plaid) This allows actions to be created/updated before
+     * the transaction is synced
      */
-    public List<TransactionActionTable> getActionsByTransactionId(final UserTable user, final String transactionId) {
+    public List<TransactionActionTable> getActionsByTransactionId(
+            final UserTable user, final String transactionId) {
         if (user == null || user.getUserId() == null || user.getUserId().isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT, "User is required");
         }
@@ -284,34 +339,41 @@ public class TransactionActionService {
         }
 
         // Get actions for this transaction
-        List<TransactionActionTable> actions = actionRepository.findByTransactionId(transactionId);
-        
+        final List<TransactionActionTable> actions = actionRepository.findByTransactionId(transactionId);
+
         // Filter to only return actions that belong to the user (security check)
         // This ensures users can only see their own actions
-        List<TransactionActionTable> userActions = actions.stream()
-                .filter(action -> action.getUserId() != null && action.getUserId().equals(user.getUserId()))
-                .collect(Collectors.toList());
-        
+        final List<TransactionActionTable> userActions =
+                actions.stream()
+                        .filter(
+                                action ->
+                                        action.getUserId() != null
+                                                && action.getUserId().equals(user.getUserId()))
+                        .collect(Collectors.toList());
+
         // Optional: Verify transaction exists and belongs to user (for logging/debugging)
-        // But don't throw error if transaction doesn't exist - actions can exist before transaction is synced
-        Optional<TransactionTable> transaction = transactionRepository.findById(transactionId);
+        // But don't throw error if transaction doesn't exist - actions can exist before transaction
+        // is synced
+        final Optional<TransactionTable> transaction = transactionRepository.findById(transactionId);
         if (transaction.isPresent()) {
             // Transaction exists - verify it belongs to user
             if (!transaction.get().getUserId().equals(user.getUserId())) {
-                throw new AppException(ErrorCode.UNAUTHORIZED_ACCESS, "Transaction does not belong to user");
+                throw new AppException(
+                        ErrorCode.UNAUTHORIZED_ACCESS, "Transaction does not belong to user");
             }
         } else {
-            // Transaction doesn't exist yet - this is OK, actions can exist before transaction is synced
-            logger.debug("Transaction {} not found in backend, but returning {} actions (transaction may not be synced yet)", 
-                    transactionId, userActions.size());
+            // Transaction doesn't exist yet - this is OK, actions can exist before transaction is
+            // synced
+            LOGGER.debug(
+                    "Transaction {} not found in backend, but returning {} actions (transaction may not be synced yet)",
+                    transactionId,
+                    userActions.size());
         }
 
         return userActions;
     }
 
-    /**
-     * Get all actions for a user
-     */
+    /** Get all actions for a user */
     public List<TransactionActionTable> getActionsByUserId(final UserTable user) {
         if (user == null || user.getUserId() == null || user.getUserId().isEmpty()) {
             throw new AppException(ErrorCode.INVALID_INPUT, "User is required");
@@ -319,4 +381,3 @@ public class TransactionActionService {
         return actionRepository.findByUserId(user.getUserId());
     }
 }
-
