@@ -1,71 +1,70 @@
 package com.budgetbuddy.service;
 
-import com.budgetbuddy.model.dynamodb.AccountTable;
-import com.budgetbuddy.model.dynamodb.UserTable;
-import com.budgetbuddy.repository.dynamodb.AccountRepository;
-import com.budgetbuddy.service.AccountDetectionService;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
+import com.budgetbuddy.model.dynamodb.AccountTable;
+import com.budgetbuddy.repository.dynamodb.AccountRepository;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.Optional;
 import java.util.UUID;
-
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
- * Integration tests for account metadata update logic with "latest" payment due date
- * Tests the updateAccountMetadataFromPDFImport method behavior
+ * Integration tests for account metadata update logic with "latest" payment due date Tests the
+ * updateAccountMetadataFromPDFImport method behavior
  */
+// PMD's LawOfDemeter is documented as imprecise on chains involving
+// standard library types (BigDecimal, String, Optional) and DTO
+// getters; this class has many such idiomatic uses. Suppress at
+// class level rather than littering every method.
+@SuppressWarnings("PMD.LawOfDemeter")
 @ExtendWith(MockitoExtension.class)
 class AccountMetadataUpdateTest {
 
-    @Mock
-    private AccountRepository accountRepository;
+    @Mock private AccountRepository accountRepository;
 
-    @Mock
-    private PDFImportService pdfImportService;
+    @Mock private PDFImportService pdfImportService;
 
-    @Mock
-    private AccountDetectionService accountDetectionService;
+    @Mock private AccountDetectionService accountDetectionService;
 
-    @Mock
-    private ImportCategoryParser importCategoryParser;
+    @Mock private ImportCategoryParser importCategoryParser;
 
-    @Mock
-    private TransactionTypeCategoryService transactionTypeCategoryService;
+    @Mock private TransactionTypeCategoryService transactionTypeCategoryService;
 
-    @Mock
-    private EnhancedPatternMatcher enhancedPatternMatcher;
+    @Mock private EnhancedPatternMatcher enhancedPatternMatcher;
 
     private PDFImportService pdfImportServiceInstance;
 
     @BeforeEach
     void setUp() {
-        pdfImportServiceInstance = new PDFImportService(
-            accountDetectionService,
-            importCategoryParser,
-            transactionTypeCategoryService,
-            enhancedPatternMatcher,
-            null
-        );
+        pdfImportServiceInstance =
+                new PDFImportService(
+                        accountDetectionService,
+                        importCategoryParser,
+                        enhancedPatternMatcher,
+                        null);
     }
 
     @Test
-    void testUpdateAccountMetadata_NewAccount_UpdatesWithFirstImport() {
+    void testUpdateAccountMetadataNewAccountUpdatesWithFirstImport() {
         // Given - New account with no existing metadata
-        String accountId = UUID.randomUUID().toString();
-        AccountTable account = new AccountTable();
+        final String accountId = UUID.randomUUID().toString();
+        final AccountTable account = new AccountTable();
         account.setAccountId(accountId);
         account.setUserId("user123");
         account.setPaymentDueDate(null);
@@ -73,12 +72,13 @@ class AccountMetadataUpdateTest {
         account.setRewardPoints(null);
         account.setBalance(null);
 
-        PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
+        final PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
         importResult.setPaymentDueDate(LocalDate.of(2024, 12, 15));
         importResult.setMinimumPaymentDue(new BigDecimal("25.00"));
-        importResult.setRewardPoints(12345L);
-        
-        AccountDetectionService.DetectedAccount detectedAccount = new AccountDetectionService.DetectedAccount();
+        importResult.setRewardPoints(12_345L);
+
+        final AccountDetectionService.DetectedAccount detectedAccount =
+                new AccountDetectionService.DetectedAccount();
         detectedAccount.setBalance(new BigDecimal("1000.00"));
         importResult.setDetectedAccount(detectedAccount);
 
@@ -89,35 +89,36 @@ class AccountMetadataUpdateTest {
         updateAccountMetadata(accountId, importResult);
 
         // Then - All metadata should be set
-        ArgumentCaptor<AccountTable> captor = ArgumentCaptor.forClass(AccountTable.class);
+        final ArgumentCaptor<AccountTable> captor = ArgumentCaptor.forClass(AccountTable.class);
         verify(accountRepository, times(1)).save(captor.capture());
-        
-        AccountTable saved = captor.getValue();
+
+        final AccountTable saved = captor.getValue();
         assertEquals(LocalDate.of(2024, 12, 15), saved.getPaymentDueDate());
         assertEquals(new BigDecimal("25.00"), saved.getMinimumPaymentDue());
-        assertEquals(12345L, saved.getRewardPoints());
+        assertEquals(12_345L, saved.getRewardPoints());
         assertEquals(new BigDecimal("1000.00"), saved.getBalance());
     }
 
     @Test
-    void testUpdateAccountMetadata_LaterDate_UpdatesAllMetadata() {
+    void testUpdateAccountMetadataLaterDateUpdatesAllMetadata() {
         // Given - Account with existing metadata (Nov 15)
-        String accountId = UUID.randomUUID().toString();
-        AccountTable account = new AccountTable();
+        final String accountId = UUID.randomUUID().toString();
+        final AccountTable account = new AccountTable();
         account.setAccountId(accountId);
         account.setUserId("user123");
         account.setPaymentDueDate(LocalDate.of(2024, 11, 15));
         account.setMinimumPaymentDue(new BigDecimal("20.00"));
-        account.setRewardPoints(10000L);
+        account.setRewardPoints(10_000L);
         account.setBalance(new BigDecimal("900.00"));
 
         // New import with later date (Dec 15)
-        PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
+        final PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
         importResult.setPaymentDueDate(LocalDate.of(2024, 12, 15));
         importResult.setMinimumPaymentDue(new BigDecimal("25.00"));
-        importResult.setRewardPoints(12345L);
-        
-        AccountDetectionService.DetectedAccount detectedAccount = new AccountDetectionService.DetectedAccount();
+        importResult.setRewardPoints(12_345L);
+
+        final AccountDetectionService.DetectedAccount detectedAccount =
+                new AccountDetectionService.DetectedAccount();
         detectedAccount.setBalance(new BigDecimal("1000.00"));
         importResult.setDetectedAccount(detectedAccount);
 
@@ -128,35 +129,36 @@ class AccountMetadataUpdateTest {
         updateAccountMetadata(accountId, importResult);
 
         // Then - All metadata should be updated (Dec 15 is later)
-        ArgumentCaptor<AccountTable> captor = ArgumentCaptor.forClass(AccountTable.class);
+        final ArgumentCaptor<AccountTable> captor = ArgumentCaptor.forClass(AccountTable.class);
         verify(accountRepository, times(1)).save(captor.capture());
-        
-        AccountTable saved = captor.getValue();
+
+        final AccountTable saved = captor.getValue();
         assertEquals(LocalDate.of(2024, 12, 15), saved.getPaymentDueDate());
         assertEquals(new BigDecimal("25.00"), saved.getMinimumPaymentDue());
-        assertEquals(12345L, saved.getRewardPoints());
+        assertEquals(12_345L, saved.getRewardPoints());
         assertEquals(new BigDecimal("1000.00"), saved.getBalance());
     }
 
     @Test
-    void testUpdateAccountMetadata_EarlierDate_KeepsExistingMetadata() {
+    void testUpdateAccountMetadataEarlierDateKeepsExistingMetadata() {
         // Given - Account with existing metadata (Dec 15)
-        String accountId = UUID.randomUUID().toString();
-        AccountTable account = new AccountTable();
+        final String accountId = UUID.randomUUID().toString();
+        final AccountTable account = new AccountTable();
         account.setAccountId(accountId);
         account.setUserId("user123");
         account.setPaymentDueDate(LocalDate.of(2024, 12, 15));
         account.setMinimumPaymentDue(new BigDecimal("25.00"));
-        account.setRewardPoints(12345L);
+        account.setRewardPoints(12_345L);
         account.setBalance(new BigDecimal("1000.00"));
 
         // New import with earlier date (Nov 15)
-        PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
+        final PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
         importResult.setPaymentDueDate(LocalDate.of(2024, 11, 15));
         importResult.setMinimumPaymentDue(new BigDecimal("20.00"));
-        importResult.setRewardPoints(10000L);
-        
-        AccountDetectionService.DetectedAccount detectedAccount = new AccountDetectionService.DetectedAccount();
+        importResult.setRewardPoints(10_000L);
+
+        final AccountDetectionService.DetectedAccount detectedAccount =
+                new AccountDetectionService.DetectedAccount();
         detectedAccount.setBalance(new BigDecimal("900.00"));
         importResult.setDetectedAccount(detectedAccount);
 
@@ -167,33 +169,34 @@ class AccountMetadataUpdateTest {
 
         // Then - Metadata should NOT be updated (Nov 15 is earlier)
         verify(accountRepository, never()).save(any(AccountTable.class));
-        
+
         // Verify existing values are preserved
         assertEquals(LocalDate.of(2024, 12, 15), account.getPaymentDueDate());
         assertEquals(new BigDecimal("25.00"), account.getMinimumPaymentDue());
-        assertEquals(12345L, account.getRewardPoints());
+        assertEquals(12_345L, account.getRewardPoints());
         assertEquals(new BigDecimal("1000.00"), account.getBalance());
     }
 
     @Test
-    void testUpdateAccountMetadata_SameDate_KeepsExistingMetadata() {
+    void testUpdateAccountMetadataSameDateKeepsExistingMetadata() {
         // Given - Account with existing metadata (Dec 15)
-        String accountId = UUID.randomUUID().toString();
-        AccountTable account = new AccountTable();
+        final String accountId = UUID.randomUUID().toString();
+        final AccountTable account = new AccountTable();
         account.setAccountId(accountId);
         account.setUserId("user123");
         account.setPaymentDueDate(LocalDate.of(2024, 12, 15));
         account.setMinimumPaymentDue(new BigDecimal("25.00"));
-        account.setRewardPoints(12345L);
+        account.setRewardPoints(12_345L);
         account.setBalance(new BigDecimal("1000.00"));
 
         // New import with same date (Dec 15)
-        PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
+        final PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
         importResult.setPaymentDueDate(LocalDate.of(2024, 12, 15));
         importResult.setMinimumPaymentDue(new BigDecimal("30.00"));
-        importResult.setRewardPoints(15000L);
-        
-        AccountDetectionService.DetectedAccount detectedAccount = new AccountDetectionService.DetectedAccount();
+        importResult.setRewardPoints(15_000L);
+
+        final AccountDetectionService.DetectedAccount detectedAccount =
+                new AccountDetectionService.DetectedAccount();
         detectedAccount.setBalance(new BigDecimal("1100.00"));
         importResult.setDetectedAccount(detectedAccount);
 
@@ -204,29 +207,30 @@ class AccountMetadataUpdateTest {
 
         // Then - Metadata should NOT be updated (same date, not later)
         verify(accountRepository, never()).save(any(AccountTable.class));
-        
+
         // Verify existing values are preserved
         assertEquals(LocalDate.of(2024, 12, 15), account.getPaymentDueDate());
         assertEquals(new BigDecimal("25.00"), account.getMinimumPaymentDue());
-        assertEquals(12345L, account.getRewardPoints());
+        assertEquals(12_345L, account.getRewardPoints());
         assertEquals(new BigDecimal("1000.00"), account.getBalance());
     }
 
     @Test
-    void testUpdateAccountMetadata_NoPaymentDueDate_OnlyUpdatesBalanceIfNull() {
+    void testUpdateAccountMetadataNoPaymentDueDateOnlyUpdatesBalanceIfNull() {
         // Given - Account with no payment due date
-        String accountId = UUID.randomUUID().toString();
-        AccountTable account = new AccountTable();
+        final String accountId = UUID.randomUUID().toString();
+        final AccountTable account = new AccountTable();
         account.setAccountId(accountId);
         account.setUserId("user123");
         account.setPaymentDueDate(null);
         account.setBalance(null);
 
         // Import with no payment due date but has balance
-        PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
+        final PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
         importResult.setPaymentDueDate(null);
-        
-        AccountDetectionService.DetectedAccount detectedAccount = new AccountDetectionService.DetectedAccount();
+
+        final AccountDetectionService.DetectedAccount detectedAccount =
+                new AccountDetectionService.DetectedAccount();
         detectedAccount.setBalance(new BigDecimal("1000.00"));
         importResult.setDetectedAccount(detectedAccount);
 
@@ -237,18 +241,18 @@ class AccountMetadataUpdateTest {
         updateAccountMetadata(accountId, importResult);
 
         // Then - Only balance should be updated
-        ArgumentCaptor<AccountTable> captor = ArgumentCaptor.forClass(AccountTable.class);
+        final ArgumentCaptor<AccountTable> captor = ArgumentCaptor.forClass(AccountTable.class);
         verify(accountRepository, times(1)).save(captor.capture());
-        
-        AccountTable saved = captor.getValue();
+
+        final AccountTable saved = captor.getValue();
         assertNull(saved.getPaymentDueDate());
         assertEquals(new BigDecimal("1000.00"), saved.getBalance());
     }
 
     @Test
-    void testUpdateAccountMetadata_NullImportResult_NoUpdate() {
+    void testUpdateAccountMetadataNullImportResultNoUpdate() {
         // Given
-        String accountId = UUID.randomUUID().toString();
+        final String accountId = UUID.randomUUID().toString();
 
         // When - Update with null import result
         updateAccountMetadata(accountId, null);
@@ -259,10 +263,10 @@ class AccountMetadataUpdateTest {
     }
 
     @Test
-    void testUpdateAccountMetadata_AccountNotFound_NoUpdate() {
+    void testUpdateAccountMetadataAccountNotFoundNoUpdate() {
         // Given
-        String accountId = UUID.randomUUID().toString();
-        PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
+        final String accountId = UUID.randomUUID().toString();
+        final PDFImportService.ImportResult importResult = new PDFImportService.ImportResult();
         importResult.setPaymentDueDate(LocalDate.of(2024, 12, 15));
 
         when(accountRepository.findById(accountId)).thenReturn(Optional.empty());
@@ -276,31 +280,33 @@ class AccountMetadataUpdateTest {
 
     // Helper method to simulate updateAccountMetadataFromPDFImport
     // This is a simplified version for testing - actual implementation is in TransactionController
-    private void updateAccountMetadata(String accountId, PDFImportService.ImportResult importResult) {
-        if (accountId == null || accountId.trim().isEmpty() || importResult == null) {
+    private void updateAccountMetadata(
+            final String accountId, final PDFImportService.ImportResult importResult) {
+        if (accountId == null || accountId.isBlank() || importResult == null) {
             return;
         }
-        
+
         try {
-            Optional<AccountTable> accountOpt = accountRepository.findById(accountId);
+            final Optional<AccountTable> accountOpt = accountRepository.findById(accountId);
             if (!accountOpt.isPresent()) {
                 return;
             }
-            
-            AccountTable account = accountOpt.get();
+
+            final AccountTable account = accountOpt.get();
             boolean needsUpdate = false;
-            
-            LocalDate newPaymentDueDate = importResult.getPaymentDueDate();
-            BigDecimal newMinimumPaymentDue = importResult.getMinimumPaymentDue();
-            Long newRewardPoints = importResult.getRewardPoints();
+
+            final LocalDate newPaymentDueDate = importResult.getPaymentDueDate();
+            final BigDecimal newMinimumPaymentDue = importResult.getMinimumPaymentDue();
+            final Long newRewardPoints = importResult.getRewardPoints();
             BigDecimal newBalance = null;
-            
-            if (importResult.getDetectedAccount() != null && importResult.getDetectedAccount().getBalance() != null) {
+
+            if (importResult.getDetectedAccount() != null
+                    && importResult.getDetectedAccount().getBalance() != null) {
                 newBalance = importResult.getDetectedAccount().getBalance();
             }
-            
-            LocalDate existingPaymentDueDate = account.getPaymentDueDate();
-            
+
+            final LocalDate existingPaymentDueDate = account.getPaymentDueDate();
+
             if (newPaymentDueDate != null) {
                 if (existingPaymentDueDate == null) {
                     account.setPaymentDueDate(newPaymentDueDate);
@@ -333,7 +339,7 @@ class AccountMetadataUpdateTest {
                     needsUpdate = true;
                 }
             }
-            
+
             if (needsUpdate) {
                 account.setUpdatedAt(Instant.now());
                 accountRepository.save(account);
@@ -343,4 +349,3 @@ class AccountMetadataUpdateTest {
         }
     }
 }
-
